--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+.cproject
+.obj/
+.project
+.svn/
+FFTTests
+GLTest
+KSPOTest
+KSUnstPOTest
+compl_res_Lohner_Taylor/*
+compl_res_Taylor/*
+complexity results_old/*
+composite_number/*
+diam_*_fftbutforddirect.txt
+directOpCnt_*.txt
+dynset/*
+tests
+test.pdf
+fftOpCnt_*.txt
+fit.log
+fits.txt
+fits_SH.txt
+interval_test
+lohner_complexity.pdf
+operations.txt
+padding_phase_shift/*
+test*_KSincl_diam_*_fft.txt
+test*_KSincl_diam_*_fftbutforddirect.txt
+test*_KSincl_diam_*_direct.txt
+test*_KSproj_diam_*_fft.txt
+test*_KSproj_diam_*_fftbutforddirect.txt
+test*_KSproj_diam_*_direct.txt
 comparision_of_diameters/*
 intervals/*
 with_without_rounding/*
@@ -22,3 +53,4 @@ test1_2.txt
 test1.txt
 test2_2.txt
 test2.txt
+*~
